tests/ui/extern_type_bound.stderr
error: extern type bounds are not implemented yet
 --> tests/ui/extern_type_bound.rs:4:22
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         type Opaque: PartialEq + PartialOrd;
  |                      ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unsupported trait
  --> tests/ui/extern_type_bound.rs:11:22
   |
8  | #[cxx::bridge]
   | -------------- in this procedural macro expansion
...
11 |         type Opaque: for<'de> Deserialize<'de>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
